--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <script type="module">
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2"
 
-    const supabaseUrl = "https://wspnhkdyzkhpquzmmzrl.supabase.co"
-    const supabaseKey = "YOUR_ANON_KEY"
+    const supabaseUrl = "https://otlbovqmbgmblrnkkbtd.supabase.co"
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im90bGJvdnFtYmdtYmxybmtrYnRkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU2NDA5NTMsImV4cCI6MjA2MTIxNjk1M30.Il51Xc9gUkRonNSeChDB-usz2bCp30R_mL99d5sWxSA"
     const supabase = createClient(supabaseUrl, supabaseKey)
 
     const messagesDiv = document.getElementById("messages")
